# claude-opus-4.6-technical-analysis

./: .gitignore  Dockerfile  LICENSE  README.md  calude techical analysis.md  claude opus 4.6.md  claude-technical-analysis.md  main.tex  pyproject.toml  readme.md  requirements.txt
claude-opus-4-6/: README.md  config.json  generation_config.json  model.safetensors.index.json  params.json  special_tokens_map.json  tokenizer_config.json
configs/: opus_4_6.yaml
scripts/: convert_to_hf.py  export_gguf.py  train.sh
src/: __init__.py
src/alignment/: __init__.py  constitutional_ai.py  dpo.py  reward_model.py
src/distributed/: __init__.py  parallelism.py
src/evaluation/: __init__.py  benchmarks.py
src/inference/: __init__.py  fast_mode.py  speculative.py  thinking_mode.py
src/model/: __init__.py  attention.py  expert_routing.py  flash_attention.py  moe.py  quantization.py  rope.py  swiglu.py  transformer.py  vision.py
src/safety/: __init__.py  classifiers.py  watermarking.py
src/serving/: __init__.py  api_server.py  batch_scheduler.py
src/tokenizer/: __init__.py  tokenizer_utils.py  train_tokenizer.py
src/training/: __init__.py  checkpoint.py  distillation.py  loss.py  optimizer.py  trainer.py
tests/: test_inference.py  test_model.py  test_serving.py  test_training.py
