[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-opus-4-6"
version = "4.6.0"
description = "Research implementation of a 2T-parameter MoE Transformer (Claude Opus 4.6)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Research Implementation", email = "research@example.com"},
]
keywords = [
    "transformer", "moe", "mixture-of-experts", "llm",
    "language-model", "deep-learning", "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.19.0",
    "transformers>=4.41.0",
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "zstandard>=0.22.0",
    "xxhash>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
logging = [
    "wandb>=0.17.0",
    "tensorboard>=2.16.0",
]
serving = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=2.0.0",
]

[project.urls]
Repository = "https://github.com/your-org/claude-opus-4-6"
Documentation = "https://github.com/your-org/claude-opus-4-6/blob/main/README.md"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
